# jc

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/jc/: Cargo.toml  README.md
crates/jc-adf/: Cargo.toml  README.md
crates/jc-adf/src/: attachments.rs  from_adf.rs  lib.rs  mentions.rs  tables.rs  to_adf.rs  toc.rs  unknown.rs
crates/jc-conf/: Cargo.toml  README.md
crates/jc-conf/src/: attachments.rs  lib.rs  page.rs  search.rs  space.rs  types.rs
crates/jc-core/: Cargo.toml  README.md
crates/jc-core/src/: cache.rs  client.rs  error.rs  lib.rs  literal.rs  paginate.rs  retry.rs
crates/jc-jira/: Cargo.toml  README.md
crates/jc-jira/src/: attachments.rs  comment.rs  fields.rs  issue.rs  issue_links.rs  jql.rs  lib.rs  search.rs  transitions.rs  types.rs  users.rs
crates/jc/src/: cli.rs  config.rs  logging.rs  main.rs  markdown_images.rs  markdown_mentions.rs  output.rs  preview.rs  sanitize.rs
crates/jc/src/commands/: mod.rs
docs/: CLAUDE.md  OVERVIEW.md
scripts/: publish.sh
