[package]
name = "jc-adf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure markdown <-> Atlassian Document Format converter"

[dependencies]
serde.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
thiserror.workspace = true
