[package]
name = "jc-adf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Pure markdown <-> Atlassian Document Format (ADF) converter. Lossless via an `adf:<type>` fenced-block escape hatch."
readme = "README.md"
keywords = ["adf", "atlassian", "markdown", "jira", "confluence"]
categories = ["text-processing", "parsing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
thiserror.workspace = true
