[package]
name = "jc-conf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Confluence Cloud REST v2 typed client"

[dependencies]
jc-core.workspace = true
jc-adf.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
