[package]
name = "jc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared HTTP client, auth, retry, errors, and cache for jc"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
