[package]
name = "jc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared HTTP client, auth, retry, error parsing, and cache primitives for the jc CLI (Jira + Confluence)."
readme = "README.md"
keywords = ["jira", "confluence", "atlassian", "http", "client"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest.workspace = true
tokio.workspace = true
url.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
