[package]
name = "jc-jira"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Typed client for Jira Cloud REST v3 — issues, comments, attachments, transitions, JQL search, and custom fields."
keywords = ["jira", "atlassian", "rest", "api", "client"]
categories = ["api-bindings"]

[dependencies]
jc-core.workspace = true
jc-adf.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
