[package]
name = "jc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Jira + Confluence CLI designed for Claude Code consumption"

[[bin]]
name = "jc"
path = "src/main.rs"

[dependencies]
jc-core.workspace = true
jc-adf.workspace = true
jc-jira.workspace = true
jc-conf.workspace = true

tokio.workspace = true
reqwest.workspace = true
url.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

keyring.workspace = true
dirs.workspace = true
