[package]
name = "jc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Single-binary CLI for Jira Cloud and Confluence Cloud, designed for Claude Code consumption. JSON-first output, markdown-native input, dry-run preview on every mutation."
keywords = ["jira", "confluence", "atlassian", "cli", "claude"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "jc"
path = "src/main.rs"

[dependencies]
jc-core.workspace = true
jc-adf.workspace = true
jc-jira.workspace = true
jc-conf.workspace = true

tokio.workspace = true
reqwest.workspace = true
url.workspace = true
pulldown-cmark.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

keyring.workspace = true
dirs.workspace = true
similar.workspace = true
